syntax = "proto3";

package vdp.pipeline.v1beta;

// OpenAPI definition
import "protoc-gen-openapiv2/options/annotations.proto";
import "../../../vdp/pipeline/v1beta/integration.proto";
import "../../../vdp/pipeline/v1beta/pipeline.proto";

// PipelinePrivateService defines private methods to interact with Pipeline
// resources.
service PipelinePrivateService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {description: "Private methods to interact with Pipeline resources."};

  // List pipelines (admin only)
  //
  // This *private* method allows internal clients to list *all* pipeline
  // resources.
  rpc ListPipelinesAdmin(ListPipelinesAdminRequest) returns (ListPipelinesAdminResponse) {}

  // Get a pipeline by UID (admin only)
  //
  // This *private* method allows internal clients to access any pipeline
  // resource by UID.
  rpc LookUpPipelineAdmin(LookUpPipelineAdminRequest) returns (LookUpPipelineAdminResponse) {}

  // List pipeline releases (admin only)
  //
  // This *private* method allows admin users to list *all* pipeline releases.
  rpc ListPipelineReleasesAdmin(ListPipelineReleasesAdminRequest) returns (ListPipelineReleasesAdminResponse) {}

  // Get a connection by UID (admin only)
  //
  // This *private* method allows internal clients to access any connection
  // resource by UID.
  rpc LookUpConnectionAdmin(LookUpConnectionAdminRequest) returns (LookUpConnectionAdminResponse) {}
}
